[package]
name = "arduino_looko2_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"