[package]
name = "arduino_looko2_server"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0"
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking"] }
parking_lot = "0.12"
